# our-place

./: .gitignore  INSTALL.md  Makefile  README.org  flake.nix  our-place.cabal  our-place.nix  toc.yaml
content/: index.md  index2.org  sample-quiz.md
css/: custom.css
example/: COPYRIGHT.md  README.org  toc.yaml
example/content/: index.md  overview.md
quiz/: sample.yaml
src/: OurPlace.hs  Quiz.hs
templates/: default.html  nav-template.html  nav.html
