name:               our-place
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable our-place
  hs-source-dirs:   src
  main-is:          OurPlace.hs
  build-depends:    base == 4.*
                  , filepath
                  , hakyll == 4.16.*
                  , pandoc
                  , text
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010


executable our-quiz
  hs-source-dirs:   src
  main-is:          Quiz.hs
  build-depends:    base,
                    yaml,
                    bytestring,
                    text,
                    directory,
                    filepath,
                    pandoc >= 2.0
  default-language: Haskell2010
